# Anchor

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  AI_PERSONALIZATION_PLAN.md  BUGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRODUCTION_READINESS.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: backend.yml  ci.yml  frontend.yml  secrets.yml
Anchor/: screen-calm.jsx  screen-focus.jsx
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: metrics.py  router.py
backend/app/ai/engines/: anthropic_engine.py  base.py  ollama_engine.py
backend/app/ai/prompts/: briefing.py  classify_game.py  coach.py  decompose.py  insight_weekly.py  nudge.py  quest_weekly.py  registry.py  rsd.py  wordgym.py
backend/app/ai/safety/: classifier.py
backend/app/api/: account.py  ai.py  auth.py  calm.py  deps.py  focus.py  games.py  health.py  notifications.py  onboarding.py  rewards.py  rooms.py  wearable.py
backend/app/core/: audit.py  auth.py  cache.py  config.py  email.py  encryption.py  idempotency.py  input_safety.py  observability.py  rate_limit.py  request_logging.py  security_headers.py  telemetry.py  token_revocation.py
backend/app/db/: database.py  models.py
backend/app/domain/rewards/: service.py
backend/app/domain/suggestion/: service.py
backend/app/domain/user_state/: service.py
backend/app/domain/workers/: deletion_worker.py  nudge_worker.py
backend/app/workers/: scheduler.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_anchor_tables.py  0002_structure_hub_tables.py  0003_quests_table.py  0004_account_deletion_requests.py  0005_auth_magic_links.py  0006_rsd_logs.py  0007_user_password_hash.py  0008_user_names.py  0009_focus_sessions_push_subscriptions.py  0010_ai_memory_tables.py  0011_deletion_cascade.py  0012_encrypt_coaching_messages.py  5ca742ae3863_add_ai_messages_and_user_state_snapshots.py
backend/tests/: conftest.py  helpers.py  test_account.py  test_ai_consent.py  test_ai_metrics.py  test_ai_router.py  test_auth.py  test_auth_hardening.py  test_brain_games.py  test_cache.py  test_calm.py  test_coach.py  test_config.py  test_cookie_auth.py  test_crisis_redteam.py  test_database.py  test_deletion_worker.py  test_docs_gating.py  test_e2e.py  test_focus.py  test_games.py  test_health.py  test_idempotency.py  test_input_safety.py  test_live_rooms.py  test_logging.py  test_observability.py  test_onboarding.py  test_password_reset.py  test_quest_weekly.py  test_rate_limit.py  test_rewards.py  test_rooms.py  test_security_headers.py  test_structure_models.py  test_suggestion.py  test_token_revocation.py  test_user_state.py  test_wearable.py  test_weekly_digest.py
docs/: AI_ENGINE_DECISION.md  DEPLOYMENT.md  PRODUCTION_READINESS.md  README.md
docs/cross-cutting/: ACCESSIBILITY.md  AI.md  (+2 more)
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
scripts/: check-secrets.sh
(+150 files in other folders)
