[project]
name = "anchor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "anthropic==0.97.0",
    "asyncpg==0.31.0",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-dotenv==1.2.2",
    "redis==7.4.0",
    "rq==2.8.0",
    "sqlalchemy[asyncio]==2.0.49",
    "uvicorn[standard]==0.46.0",
    "cryptography==47.0.0",
    "pywebpush==2.3.0",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-api==1.41.1",
    "opentelemetry-instrumentation-fastapi==0.62b1",
    "opentelemetry-instrumentation-sqlalchemy==0.62b1",
    "opentelemetry-exporter-otlp-proto-http==1.41.1",
    "pyjwt==2.12.1",
    "ollama>=0.6.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
